v3.1.7/_sources/plugins/site_health_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na

.. Anchors

.. _ansible_collections.cisco.dnac.site_health_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.site_health_info -- Information module for Site Health
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.7).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.site_health_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Site Health.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-headers"></div>
                    <b>headers</b>
                    <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Additional headers.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-timestamp"></div>
                    <b>timestamp</b>
                    <a class="ansibleOptionLink" href="#parameter-timestamp" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Timestamp query parameter. Epoch time(in milliseconds) when the Site Hierarchy data is required.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Attributes


.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Site Health reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Site Health object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Site Health
      cisco.dnac.site_health_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        timestamp: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">[
      {
        &quot;siteName&quot;: &quot;string&quot;,
        &quot;siteId&quot;: &quot;string&quot;,
        &quot;parentSiteId&quot;: &quot;string&quot;,
        &quot;parentSiteName&quot;: &quot;string&quot;,
        &quot;siteType&quot;: &quot;string&quot;,
        &quot;latitude&quot;: 0,
        &quot;longitude&quot;: 0,
        &quot;healthyNetworkDevicePercentage&quot;: {},
        &quot;healthyClientsPercentage&quot;: {},
        &quot;clientHealthWired&quot;: {},
        &quot;clientHealthWireless&quot;: {},
        &quot;numberOfClients&quot;: {},
        &quot;numberOfNetworkDevice&quot;: {},
        &quot;networkHealthAverage&quot;: {},
        &quot;networkHealthAccess&quot;: {},
        &quot;networkHealthCore&quot;: {},
        &quot;networkHealthDistribution&quot;: {},
        &quot;networkHealthRouter&quot;: {},
        &quot;networkHealthWireless&quot;: {},
        &quot;networkHealthOthers&quot;: {},
        &quot;numberOfWiredClients&quot;: {},
        &quot;numberOfWirelessClients&quot;: {},
        &quot;totalNumberOfConnectedWiredClients&quot;: {},
        &quot;totalNumberOfActiveWirelessClients&quot;: {},
        &quot;wiredGoodClients&quot;: {},
        &quot;wirelessGoodClients&quot;: {},
        &quot;overallGoodDevices&quot;: {},
        &quot;accessGoodCount&quot;: {},
        &quot;accessTotalCount&quot;: {},
        &quot;coreGoodCount&quot;: {},
        &quot;coreTotalCount&quot;: {},
        &quot;distributionGoodCount&quot;: {},
        &quot;distributionTotalCount&quot;: {},
        &quot;routerGoodCount&quot;: {},
        &quot;routerTotalCount&quot;: {},
        &quot;wirelessDeviceGoodCount&quot;: {},
        &quot;wirelessDeviceTotalCount&quot;: {},
        &quot;applicationHealth&quot;: {},
        &quot;applicationGoodCount&quot;: {},
        &quot;applicationTotalCount&quot;: {},
        &quot;applicationBytesTotalCount&quot;: {},
        &quot;dnacInfo&quot;: {},
        &quot;applicationHealthStats&quot;: {
          &quot;appTotalCount&quot;: 0,
          &quot;businessRelevantAppCount&quot;: {
            &quot;poor&quot;: 0,
            &quot;fair&quot;: 0,
            &quot;good&quot;: 0
          },
          &quot;businessIrrelevantAppCount&quot;: {
            &quot;poor&quot;: 0,
            &quot;fair&quot;: 0,
            &quot;good&quot;: 0
          },
          &quot;defaultHealthAppCount&quot;: {
            &quot;poor&quot;: 0,
            &quot;fair&quot;: 0,
            &quot;good&quot;: 0
          }
        }
      }
    ]</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

